<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Tripbd-User</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="hintWriteCityDistrict" translatable="false">
        <font size="12">Write City/District and select from popup</font>
    </string>
    <string-array name="timeEng">
        <item> 12 AM</item>
        <item> 1 AM</item>
        <item> 2 AM</item>
        <item> 3 AM</item>
        <item> 4 AM</item>
        <item> 5 AM</item>
        <item> 6 AM</item>
        <item> 7 AM</item>
        <item> 8 AM</item>
        <item> 9 AM</item>
        <item> 10 AM</item>
        <item> 11 AM</item>
        <item> 12 PM</item>
        <item> 1 PM</item>
        <item> 2 PM</item>
        <item> 3 PM</item>
        <item> 4 PM</item>
        <item> 5 PM</item>
        <item> 6 PM</item>
        <item> 7 PM</item>
        <item> 8 PM</item>
        <item> 9 PM</item>
        <item> 10 PM</item>
        <item> 11 PM</item>
    </string-array>
    <string-array name="productCategory">
        <item>Consumable items</item>
        <item>Electronics Electrical items</item>
        <item>Construction items</item>
        <item>Agricltural Commodities</item>
        <item>Household items</item>
        <item>Chemical and Combustible products</item>
        <item>Animal Feed</item>
        <item>Live Animal</item>
        <item>Mechineries and Heavy Equipments</item>
        <item>Transport and Transport related items</item>
        <item>Every day products</item>
        <item>Industrial products</item>
        <item>Raw Materials</item>
        <item>Agricultural Inputs</item>
        <item>Educational Inputs</item>
        <item>Supporting Inputs</item>
        <item>Garments and Textiles</item>
        <item>Medicine and life supporting Inputs</item>
        <item>Event Management Items </item>
    </string-array>
    <string-array name="pickupSize">
        <item>7 feet 1 Ton</item>
        <item>9 feet 1.5 Ton</item>
        <item>12 feet 2 Ton</item>
        <item>12 feet 3 Ton</item>
    </string-array>
    <string-array name="truckSize">
        <item>13 feet 1.5 Ton -light weight</item>
        <item>14 feet 3.5 Ton -light weight</item>
        <item>16 feet 3.5 Ton -light weight</item>
        <item>16 feet 5 Ton -medium weight</item>
        <item>16 feet 8.5 Ton -medium weight</item>
        <item>20 feet 5.5 Ton -medium weight</item>
        <item>19.5 feet 7.5 Ton -medium weight</item>
        <item>24 feet 8 Ton -medium weight</item>
        <item>32 feet 7.5 Ton -medium weight</item>
        <item> 14 feet 15 Ton -heavy weight</item>
        <item>17.5 feet 9 Ton -heavy weight</item>
        <item>20 feet 11 Ton -heavy weight</item>
        <item>20 feet 15 Ton -heavy weight</item>
        <item>22 feet 19 Ton -heavy weight</item>
        <item>23 feet 20 Ton -heavy weight</item>
        <item>23 feet 25 Ton -heavy weight</item>
        <item>24 feet 25 Ton -heavy weight</item>
        <item>28 feet 30 Ton -heavy weight</item>
        <item>20 feet 16 Ton -heavy weight</item>
        <item>24 feet 16 Ton -heavy weight</item>
        <item>32 feet 16 Ton -heavy weight</item>

    </string-array>
    <string-array name="trailerSize">
        <item>10 wheel 30 Ton flatbed</item>
        <item>14 wheel 40 Ton flatbed</item>
        <item>18 wheel 47 Ton flatbed</item>
        <item>22 wheel 49Ton flatbed</item>
        <item>26 wheel 52 Ton flatbed</item>
        <item>40 feet 33 Ton flatbed</item>
        <item>40 feet 34 Ton flatbed</item>
        <item>10 wheel 30 Ton lowbed</item>
        <item>14 wheel 40 Ton lowbed</item>
        <item>18 wheel 47 Ton lowbed</item>
        <item>22 wheel 49Ton lowbed</item>
        <item>26 wheel 52 Ton lowbed</item>
        <item>40 feet 33 Ton lowbed</item>
        <item>40 feet 34 Ton lowbed</item>
        <item>45 Feet 31 Ton box</item>

    </string-array>
    <string-array name="privateCarModel">
        <item>Toyota</item>
        <item>Toyota premio</item>
        <item>Toyota Allion</item>
        <item>Toyota Axio Fielder</item>
        <item>Toyota Aqua</item>
        <item>Toyota C-HR</item>
        <item>Toyota probox</item>
        <item>Toyota Harrier</item>
        <item>Toyota prado</item>
        <item>Toyota Crown</item>
        <item>Toyota Prius</item>
        <item>Toyota Hilux</item>
        <item>Toyota Yaris</item>
        <item>Toyota Avanza</item>
        <item>Toyota RAV 4</item>
        <item>Toyota Rush</item>
        <item>Toyota Fortuner</item>
        <item>Toyota LC 200</item>
        <item>Toyota Camry</item>
        <item>Toyota Dyna</item>
        <item>Toyota Spacio</item>
        <item>Toyota Navara</item>
        <item>Toyota Kluger</item>
        <item>Toyota Esquire</item>
        <item>Toyota Fielder</item>
        <item>Toyota Corolla</item>
        <item>Toyota Mark</item>
        <item>Toyota Vitz</item>
        <item>Toyota passo</item>
        <item>Toyota Corsa</item>
        <item>Toyota Carina</item>
        <item>Toyota Vios</item>
        <item>Toyota Highlander</item>
        <item>Toyota Vista</item>
        <item>Toyota Starlet</item>
        <item>Toyota Duet</item>
        <item>Toyota Auris</item>
        <item>Toyota Platz</item>
        <item>Toyota Succeeed</item>
        <item>Toyota Land Cruiser</item>
        <item>Toyota Ractis</item>
        <item>Toyota Ragius</item>
        <item>Toyota Voxy</item>
        <item>Nissan</item>
        <item>Nissan Navara</item>
        <item>Nissan Caravan</item>
        <item>Nissan DAYZ-ROOX</item>
        <item>Nissan Patrol</item>
        <item>Nissan Cefiro</item>
        <item>Nissan Sunny</item>
        <item>Nissan X-Trail</item>
        <item>Nissan Juke</item>
        <item>Honda</item>
        <item>Honda Vezel</item>
        <item>Honda Grace</item>
        <item>Honda CR-V</item>
        <item>Honda Fit</item>
        <item>Honda Civic</item>
        <item>Honda Insight</item>
        <item>Honda Accord</item>
        <item>Mazda</item>
        <item>Mazda Axela</item>
        <item>Mazda CX- 3</item>
        <item>Suzuki</item>
        <item>Suzuki Wagon</item>
        <item>Maruti Suzuki</item>
        <item>Suzuki Alto</item>
        <item>Suzuki Ciaz</item>
        <item>Mitsubishi</item>
        <item>Mitsubishi Lancer</item>
        <item>Mitsubishi Pajero</item>
        <item>Mitsubishi Mirage</item>
        <item>Mitsubishi Gallant</item>
        <item>Mitsubishi Outlandish</item>
        <item>Mitsubishi Colt</item>
        <item>Marcedes</item>
        <item>Marcedes Benz</item>
        <item>Ford Ecosport</item>
        <item>Hyundai</item>
        <item>Hyundai Santafi</item>
        <item>Hyundai Tucson</item>
        <item>Hyundai Accent</item>
        <item>Hyundai Sonata</item>
        <item>Tata</item>
        <item>Tata Indigo</item>
        <item>BMW</item>
        <item>BMW X3</item>
        <item>BMW X5</item>
        <item>BMW 7 series</item>
        <item>DFSK Glory</item>
        <item>Kia Sportage</item>
        <item>Havel Jolion</item>
        <item>Toyota ist</item>

    </string-array>
    <string-array name="microBusModel">
        <item>Toyota Hias</item>
        <item>Toyota Hias Freezer</item>
        <item>Toyota Hias DX</item>
        <item>Toyota Hias Grand Cabin</item>
        <item>Toyota Noah</item>
        <item>Toyota M. Crop</item>
        <item>Toyota Hias GL</item>
        <item>Toyota Hias Super GL</item>
        <item>Toyota Mini coaster</item>
        <item>Volvo Tourist bus</item>
        <item>Hyundai Tourist bus</item>
        <item>MAN Tourist Bus</item>
        <item>Hyundai H1</item>
        <item>Suzuki Omni</item>
        <item>Suzuki APV</item>
        <item>Foton Microbus</item>
        <item>Nissan Civilian</item>
        <item>Nissan DAYZ-ROOX</item>
        <item>Nissan Urvan</item>
    </string-array>
    <string-array name="tourBusModel">
        <item>Tata Bus</item>
        <item>Ashok Leyland Double Decker</item>
        <item>Tata Bus 42</item>
        <item>Ashok Leyland LYNX</item>
        <item>Isuzy LT</item>
        <item>Hino RC RB</item>
        <item>Hino 1 j</item>
        <item>Hina RG 197</item>
        <item>Hino Urban AK 1 j</item>
        <item>Hino RN-8 JSK</item>
        <item>Hino RK 260</item>
        <item>Eicher 1090</item>
        <item>Eicher 2015</item>
        <item>DCM DYNA</item>
        <item>Isuzu MT 134Q</item>
        <item>Isuzu LT 133P</item>
        <item>Isuzu FTR 33R</item>
        <item>Isuzu NKR 552</item>
        <item>Tata LP 712</item>
        <item>Tata LP 407</item>
        <item>Tata LP 909</item>
        <item>Tata LP 709</item>
        <item>Tata LPO 1618</item>
        <item>Tata LPO 1316</item>
        <item>Tata LPO 1512</item>
        <item>Tata LPO 1515</item>
        <item>Tata 1616</item>
        <item>Tata 1512 FC</item>
        <item>Ashok Leyland Stag 1212</item>
        <item>Hino ak ji</item>
        <item>Issuzu LT 133P</item>
        <item>Hino rm2</item>
        <item>Toyota coaster</item>
        <item>Eicher</item>
        <item>Mitsubishi Rosa</item>
        <item>Mitsubishi Fuso</item>
        <item>Hino RK230</item>
        <item>Hino RG 230</item>
        <item>Tata TC 1109</item>
        <item>Tata TC 1510</item>
        <item>Tata Starbus School</item>
        <item>Fuso BM 11 Turbo</item>
        <item>Ashol Leyland 1818</item>
        <item>Mistubishi Fuso FE71</item>
        <item>Isuzu NKR 55 L</item>
        <item>Eicher 10.90</item>
        <item>Eicher 1212 K</item>
        <item>Eicher 190 L</item>
        <item>Eicher 1060</item>
    </string-array>
    <string-array name="privateCarSeat">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="microBusSeat">
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
    </string-array>
    <string name="unload_location">Unload Location</string>
    <string name="load_location">load Location</string>
    <string name="contain_animal">Contain Animal</string>
    <string name="fragile">Fragile</string>
    <string name="perishable">Perishable</string>
    <string name="labor_needed_saparate_cost">Labor Needed ( Saparate Cost)</string>
    <string name="product_description">Product Description</string>
    <string name="phone_number_01xxxxxxxxx">Phone Number (01xxxxxxxxx)</string>
    <string name="country_code">Country Code</string>
    <string name="_88">+88</string>
    <string name="log_in">Log In</string>
    <string name="register_using_mobile_number">Register using Mobile Number</string>
    <string name="we_will_send_an_one_time">We will send an one time</string>
    <string name="verification_code">Verification code</string>
    <string name="on_this_mobile_number">on this mobile number</string>
    <string name="enter_your_11_digit_mobile_number">Enter your 11 Digit Mobile Number</string>
    <string name="if_you_have_any_account_sign_in">If you have any Account, Log in…</string>
    <string name="register">Register</string>
    <string name="fragile_product_you_have_to_carry_it_very_safely">Fragile Product, You have to carry it very safely</string>
    <string name="up_down_trip" translatable="false">✔ Up-Down Trip</string>
</resources>