<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.SignUpActivity"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_sign_up"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:titleTextColor="@color/white"
            app:title="Registration">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_below="@id/appbar_sign_up"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal
">

            <ImageView
                android:id="@+id/imgv_otp_icon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/sms_sent"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/txtv1"
                android:layout_below="@+id/imgv_otp_icon"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_using_mobile_number" />

            <LinearLayout
                android:id="@+id/lay_1"
                android:layout_below="@+id/txtv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/txtv2"
                    android:textSize="12sp"
                    android:text="@string/we_will_send_an_one_time"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />

                <TextView
                    android:id="@+id/txtv3"
                    android:textSize="12sp"
                    android:textColor="@android:color/black"
                    android:text="@string/verification_code"
                    android:textAlignment="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtv4"
                android:layout_below="@+id/lay_1"
                android:layout_centerHorizontal="true"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/on_this_mobile_number"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/txtv5"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/txtv4"
                android:layout_centerHorizontal="true"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/enter_your_11_digit_mobile_number"
                android:textAlignment="center"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />



            <LinearLayout
                android:id="@+id/ly_phone_number"
                android:layout_below="@+id/txtv5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_centerHorizontal="true">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_countryCode"
                    android:hint="@string/country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="150dp"
                    android:textColorHint="@color/black"
                    app:startIconTint="@color/black"
                    app:endIconTint="@color/black"

                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_call_black_24dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="wrap_content"
                        android:textColor="@color/black"
                        android:inputType="phone"
                        android:text="@string/_88"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_phone_number"
                    android:hint="@string/phone_number_01xxxxxxxxx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="250dp"
                    app:hintTextColor="@color/black"
                    app:startIconTint="@color/black"
                    app:endIconTint="@color/black"
                    app:endIconMode="clear_text"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:textColor="@color/black"
                        android:inputType="phone"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_below="@+id/ly_phone_number"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/txtv_hint1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2.5dp"
                    android:text="@string/if_you_have_any_account_sign_in"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sign_up"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtv_hint1"
                    android:text="@string/register"
                    android:textAllCaps="false"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_goto_sign_in"
                    android:layout_toRightOf="@id/btn_sign_up"
                    android:layout_marginLeft="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtv_hint1"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:text="@string/log_in"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</RelativeLayout>