<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_car_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            />
        <TextView
            android:id="@+id/tv_car_date_time"
            android:layout_below="@+id/tv_car_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textColor="@color/black"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            />



        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_loading_unloading"
            android:layout_marginTop="20dp"
            android:layout_below="@id/tv_car_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="10dp"
                >
                <TextView
                    android:id="@+id/tv_loading_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/load_location"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:paddingTop="7dp"
                    />
                <TextView
                    android:id="@+id/tv_loading_upazila_district"
                    android:layout_below="@+id/tv_loading_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:paddingBottom="5dp"
                    />
                <TextView
                    android:id="@+id/tv_loading_full_address"
                    android:layout_below="@+id/tv_loading_upazila_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:paddingBottom="5dp"
                    />
                <TextView
                    android:id="@+id/tv_unloading_header"
                    android:layout_below="@+id/tv_loading_full_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unload_location"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:paddingTop="2dp"
                    />
                <TextView
                    android:id="@+id/tv_unloading_upazila_district"
                    android:layout_below="@+id/tv_unloading_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:paddingBottom="5dp"
                    />
                <TextView
                    android:id="@+id/tv_unloading_full_address"
                    android:layout_below="@+id/tv_unloading_upazila_district"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:paddingBottom="5dp"
                    />
                <TextView
                    android:id="@+id/tv_description_header"
                    android:layout_below="@+id/tv_unloading_full_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_description"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:paddingTop="7dp"
                    />
                <TextView
                    android:id="@+id/tv_description"
                    android:layout_below="@+id/tv_description_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragile_product_you_have_to_carry_it_very_safely"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    />




            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_additional"
            android:layout_below="@id/cv_loading_unloading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="10dp"
                >
                <TextView
                    android:id="@+id/tv_up_down_trip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/up_down_trip"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginTop="10dp"
                    />
                <TextView
                    android:id="@+id/tv_contain_animal"
                    android:layout_below="@+id/tv_up_down_trip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contain_animal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    />
                <TextView
                    android:id="@+id/tv_fragile_product"
                    android:layout_below="@+id/tv_contain_animal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fragile"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    />
                <TextView
                    android:id="@+id/tv_perishable_product"
                    android:layout_below="@+id/tv_fragile_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/perishable"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    />
                <TextView
                    android:id="@+id/tv_labor_needed"
                    android:layout_below="@+id/tv_perishable_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/labor_needed_saparate_cost"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginTop="5dp"
                    />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>



    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>